# formaloo-python

./: .env.example  .gitignore  LICENSE  README.md  setup.cfg  setup.py
formaloo/: client.py  constants.py  helper.py  settings.py  tags.py
formaloo/activities/: __init__.py  activity.py  batch.py
formaloo/businesses/: business.py
formaloo/customers/: __init__.py  batch.py  customer.py
formaloo/forms/: __init__.py  category.py  field.py  form.py  form_display.py  payment_method.py  row_tag.py  row_vote.py  template.py
formaloo/gamification/: __init__.py  job.py
requirements/: default.txt
