[metadata]
# replace with your username:
name = formaloo-cdp
version = 0.1.12
author = Formaloo
author_email = info@formaloo.com
description = Official SDK to use Formaloo API
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/formaloo/formaloo-python
project_urls =
    Bug Tracker = https://github.com/formaloo/formaloo-python/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
python_requires = >=3.6

[options.packages.find]